BUG: Activities not showing

--- a/src/pages/interactiveMap/components/ActivitiesMonitor.css
+++ b/src/pages/interactiveMap/components/ActivitiesMonitor.css
@@ -11,7 +11,7 @@
 }
 .activity-list-map-desktop {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     gap: 50px;
     padding-bottom: 10px;
